#pragma once
#include <iostream>
#include <vector>
#include <cmath>
#include "LocalizationManager.h"
#include "Entity.h"
#include "Logger.h"
#include "IObserver.h"

using namespace std;

#ifndef UNTITLED23_ZOMBIE_H
#define UNTITLED23_ZOMBIE_H
#endif
/**
 * @brief Клас ворога-зомбі.
 */
class Zombie : public Entity {
    protected:
    int x, y;
    std::vector<IObserver*> observers;

public:
    Zombie() : Entity("Zombie", 50, 10), x(0), y(0) {}

    Zombie(const string& n, int h, int d, int sx, int sy)
            : Entity(n, h, d), x(sx), y(sy) {}

    void addDeathObserver(IObserver* observer) {
        observers.push_back(observer);
    }

    virtual void notifyObserversOnDeath() {
        for (auto* observer : observers) {
            observer->onEnemyKilled(10); 
        }
    }

    void attack(Entity& target) override {
        LOG_INFO(L10N.getString("zombie_attack_header"));
        LOG_INFO(L10N.getFormattedString("zombie_bites_target", name, health, target.getName(), target.getHealth()));

        target.takeDamage(damage);

        LOG_INFO(L10N.getFormattedString("target_hp_remaining", target.getName(), target.getHealth()));
    }

    /**
     * @brief Розумне пересування до цілі.
     * * Зомби намагається скоротити дистанцію до гравця, обходячи стіни (1).
     * Також перевіряє, чи не зайнята клітинка іншим зомбі.
     * @param targetX Координата X цілі.
     * @param targetY Координата Y цілі.
     * @param mapGrid Карта.
     * @param allEnemies Список усіх ворогів (для уникнення колізій).
     */
    void moveTowards(int targetX, int targetY, const vector<vector<int>>& mapGrid, const vector<Entity*>& allEnemies) {
        int dx = targetX - x;
        int dy = targetY - y;

        int nextX = x;
        int nextY = y;

        bool tryHorizontal = abs(dx) > abs(dy);

        if (tryHorizontal) {
            nextX += (dx > 0) ? 1 : -1;
        } else {
            nextY += (dy > 0) ? 1 : -1;
        }
        // Перевірка на стіни (1 - це стіна)
        if (nextX < 0 || nextX >= (int)mapGrid[0].size() || nextY < 0 || nextY >= (int)mapGrid.size() || mapGrid[nextY][nextX] != 0) {
            LOG_DEBUG(name + " hit a wall at (" + to_string(nextX) + "," + to_string(nextY) + "). Trying alternative path.");

            nextX = x;
            nextY = y;

            if (tryHorizontal) {
                if (dy != 0) nextY += (dy > 0) ? 1 : -1;
            } else {
                if (dx != 0) nextX += (dx > 0) ? 1 : -1;
            }

            if (mapGrid[nextY][nextX] != 0) {
                LOG_DEBUG(name + " is stuck (alternative path blocked).");
                return;
            }
        }

        // Перевірка на інших зомбі
        for (const auto* enemy : allEnemies) {
            if (const auto* z = dynamic_cast<const Zombie*>(enemy)) {
                if (z == this) continue;
                if (z->getX() == nextX && z->getY() == nextY) {
                    LOG_DEBUG(name + " blocked by another enemy at (" + to_string(nextX) + "," + to_string(nextY) + ")");
                    return;
                }
            }
        }


        if (x != nextX || y != nextY) {
            x = nextX;
            y = nextY;
        }
    }

    char getSymbol() const override { return 'Z'; }
    int getX() const { return x; }
    int getY() const { return y; }
};